--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>To Do App</title>
-</head>
-<body>
+{% include "header.html" %}
 
-</body>
-</html>
+{% include "footer.html" %}
