--- a/ToDoApp/templates/index.html
+++ b/ToDoApp/templates/index.html
@@ -1,3 +1,13 @@
 {% include "header.html" %}
-
+        <header class="py-5">
+            <div class="container px-lg-5">
+                <div class="p-4 p-lg-5 bg-light rounded-3 text-center">
+                    <div class="m-4 m-lg-5">
+                        <h1 class="display-5 fw-bold">Welcom in ToDoApp!</h1>
+                        <p class="fs-4">Create your ToDoList and never forget what you were supposed to do! </p>
+                        <a class="btn btn-primary btn-lg" href="#!">Call to action</a>
+                    </div>
+                </div>
+            </div>
+        </header>
 {% include "footer.html" %}
