--- a/ToDoApp/templates/header.html
+++ b/ToDoApp/templates/header.html
@@ -37,6 +37,10 @@
       href="{{ url_for('static', filename='css/styles.css') }}"
       rel="stylesheet"
     />
+      <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
+    />
     {% endblock %}
   </head>
   <body>
