--- a/ToDoApp/templates/footer.html
+++ b/ToDoApp/templates/footer.html
@@ -37,6 +37,9 @@
       <!-- Bootstrap core JS-->
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
       <!-- Core theme JS-->
-      <script src="{{ url_for('static', filename='js/scripts.js') }}"></script>
+        <script>
+      const LIST_ADD_URL = "{{ url_for('main.list_add') }}";
+        </script>
+      <script src="{{ url_for('static', filename='js/dashboard.js') }}"></script>
   </body>
 </html>
