--- a/ToDoApp/templates/footer.html
+++ b/ToDoApp/templates/footer.html
@@ -40,6 +40,7 @@
         <script>
       const LIST_ADD_URL = "{{ url_for('main.list_add') }}";
         </script>
-      <script src="{{ url_for('static', filename='js/dashboard.js') }}"></script>
+         {{ bootstrap.load_js() }}
+      <script type="module" src="{{ url_for('static', filename='js/main.js') }}"></script>
   </body>
 </html>
